fix: iframe overflow

--- a/app/themes/hunger-tv/assets/styles/components/embed.scss
+++ b/app/themes/hunger-tv/assets/styles/components/embed.scss
@@ -1,12 +1,9 @@
 // Embed
 
-// .embed iframe {
-// 	width: 100%;
-// }
-
 iframe,
 .twitter-tweet {
-	width: 100%;
+	width: 100% !important;
+	min-width: auto !important;
 	margin: auto !important;
 }
 
